Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3470

traffic_server --help segfaults with SPDY

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.3.0, 6.0.0
    • Core
    • None

    Description

      amc found that with SPDY enabled, traffic_server --help segfaults. Testing on our ASAN enabled server, I see

      [root@qa1 trafficserver]# /opt/ats/bin/traffic_server  --help
      traffic_server: using root directory '/opt/ats'
      Usage: traffic_server [--SWITCH [ARG]]
        switch__________________type__default___description
        -n, --net_threads       int   4         Number of Net Threads
        -Z, --cluster_threads   int   1         Number of Cluster Threads
        -U, --udp_threads       int   0         Number of UDP Threads
        -a, --accept_thread     tog   false     Use an Accept Thread
        -b, --accept_till_done  tog   true      Accept Till Done
        -p, --httpport          str   (null)    Port descriptor for HTTP Accept
        -P, --cluster_port      int   0         Cluster Port Number
        -o, --dprintf_level     int   0         Debug output level
        -T, --debug_tags        str             Vertical-bar-separated Debug Tags
        -B, --action_tags       str             Vertical-bar-separated Behavior Tags
        -i, --interval          int   0         Statistics Interval
        -M, --remote_management tog   false     Remote Management
        -C, --command           str             Maintenance Command to Execute
        -D, --conf_dir          str             config dir to verify
        -k, --clear_hostdb      on    false     Clear HostDB on Startup
        -K, --clear_cache       on    false     Clear Cache on Startup
        -c, --read_core         str             Read Core file
        - , --accept_mss        int   0         MSS for client connections
        -t, --poll_timeout      int   -1        poll timeout in milliseconds
        -h, --help                              Print usage information
        -V, --version                           Print version string
      ASAN:SIGSEGV
      =================================================================
      ==15134==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000038 (pc 0x0000007d87c1 sp 0x7fff9960a840 bp 0x7fff9960a890 T0)
          #0 0x7d87c0 in SpdyClientSession::clear() /usr/local/src/trafficserver/proxy/spdy/SpdyClientSession.cc:121
          #1 0x7dc8f8 in ~SpdyClientSession /usr/local/src/trafficserver/proxy/spdy/SpdyClientSession.h:95
          #2 0x7dc8f8 in ClassAllocator<SpdyClientSession>::~ClassAllocator() ../../lib/ts/Allocator.h:198
          #3 0x7f4ee1328e58 in __run_exit_handlers (/lib64/libc.so.6+0x38e58)
          #4 0x7f4ee1328ea4 in exit (/lib64/libc.so.6+0x38ea4)
          #5 0x7f4ee415ee0e in usage(ArgumentDescription const*, unsigned int, char const*) /usr/local/src/trafficserver/lib/ts/ink_args.cc:326
          #6 0x7f4ee415d935 in process_arg /usr/local/src/trafficserver/lib/ts/ink_args.cc:116
          #7 0x7f4ee415e65f in process_args_ex(AppVersionInfo const*, ArgumentDescription const*, unsigned int, char const**) /usr/local/src/trafficserver/lib/ts/ink_args.cc:219
          #8 0x7f4ee415f0aa in process_args(AppVersionInfo const*, ArgumentDescription const*, unsigned int, char const**, char const*) /usr/local/src/trafficserver/lib/ts/ink_args.cc:161
          #9 0x497fae in main /usr/local/src/trafficserver/proxy/Main.cc:1430
          #10 0x7f4ee1311af4 in __libc_start_main (/lib64/libc.so.6+0x21af4)
          #11 0x4ac024 (/opt/ats/bin/traffic_server+0x4ac024)
      
      AddressSanitizer can not provide additional info.
      SUMMARY: AddressSanitizer: SEGV /usr/local/src/trafficserver/proxy/spdy/SpdyClientSession.cc:121 SpdyClientSession::clear()
      ==15134==ABORTING
      

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: