TS-3470 traffic_server --help segfaults when SPDY is enabled

(cherry picked from commit e0de1d6edd57130b15c1a4e8f3c2c89f2eced3cb)

Conflicts:
	CHANGES